--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "contactapi",
   "version": "1.0.0",
-  "description": "List all contact  and get contact by id or by name",
+  "description": "List all contact and get contact by id or by name",
   "main": "server.js",
   "scripts": {
-    "test": "node server.js"
+    "test": "node server.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write './**/*.{js,jsx,json,css,md}'"
   },
   "keywords": [
     "javascript",
@@ -24,8 +27,18 @@
   "author": "winsley jeune",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^2.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongo": "^0.1.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.26.0",
+    "eslint": "^9.26.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.4.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.1.0",
+    "prettier": "^3.5.3"
   }
 }
